--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"gulp-eslint": "^6.0.0",
 		"gulp-minify": "^3.1.0",
 		"gulp-open": "^3.0.1",
+		"gulp-prettier": "^2.1.0",
 		"gulp-zip": "^5.0.0",
 		"jasmine": "^3.4.0",
 		"sinon-chrome": "^3.0.1"
